--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <!-- ---------------------- HEADER ---------------------- -->
   <header class="flex items-center justify-between bg-White py-6 px-6 z-50 
-  lg:py-10 lg:border-b-[1px] lg:border-b-Black-75 lg:border-opacity-20 lg:max-w-[1440px] lg:relative lg:left-1/2 lg:-translate-x-1/2">
+  lg:py-10 lg:border-b-[1px] lg:border-b-Black-75 lg:border-opacity-20 lg:max-w-[1100px] lg:relative lg:left-1/2 lg:-translate-x-1/2 lg:px-0">
     <!-- ---------------------- burger ---------------------- -->
     <div class="flex items-center gap-4">
       <svg class="open-menu lg:hidden" width="16" height="15" xmlns="http://www.w3.org/2000/svg"><path d="M16 12v3H0v-3h16Zm0-6v3H0V6h16Zm0-6v3H0V0h16Z" fill="#69707D" fill-rule="evenodd"/></svg>
@@ -91,7 +91,7 @@
   </div>
 
   <!-- ---------------------- CAROUSEL IMAGE ---------------------- -->
-<div class="lg:flex lg:items-center lg:justify-center lg:max-w-[1040px] lg:ml-auto lg:mr-auto lg:mt-28 lg:gap-28">
+<div class="lg:flex lg:items-center lg:justify-center lg:max-w-[1040px] lg:ml-auto lg:mr-auto lg:mt-24 lg:gap-28">
   <div class="carousel-container lg:space-y-7 lg:w-2/4">
     <div class="main-image-container relative">
         <button class="group nav-button prev absolute top-1/2 -translate-y-7 rounded-full w-10 h-10 bg-White flex justify-center items-center left-3">
