--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <svg width="13" height="18" xmlns="http://www.w3.org/2000/svg"><path class="svg-stroke" d="m2 1 8 8-8 8" stroke="#1D2026" stroke-width="3" fill="none" fill-rule="evenodd"/></svg>
         </button>
         <picture>
-            <!-- L'image sera insérée ici -->
+            <!-- L'image sera insérée iciiii -->
         </picture>
     </div>
     <div class="thumbnails hidden lg:flex lg:gap-7 lg:*:cursor-pointer">
@@ -131,7 +131,7 @@
         </div>
     </div>
   </div>
-    
+  
   
   <div class="p-6 lg:w-2/4">
     <div class="text-Dark-grayish-blue uppercase font-bold text-xs tracking-[2px] mb-3">Sneaker Company</div>
